--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://party.gq" target="_blank"><span style="color:#2bf7c0;">party.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.gtcool.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://d.officeblog.jp/" target="_blank">蓝色资源</a></li>
 <li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
@@ -79,7 +79,7 @@
 <li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://goxav.cf/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
-<li><a href="http://www.playno1.com/?fromuid=284114" target="_blank">PLAYNO.1</a></li>
+<li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayahaus.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://provider.icargo.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
@@ -113,8 +113,8 @@
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
-<li><a href="http://www.naluone-at.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
-<li><a href="http://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
+<li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
+<li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg169.com/?fromuid=5741" target="_blank">夜香阁</a></li>
@@ -130,7 +130,6 @@
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
-<li><a href="http://ooxx9.net/?fromuid=549063" target="_blank">OOXX论坛</a></li>
 <li><a href="http://www.xav66.com/" target="_blank">XIAAV</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yxj163.com/?fromuid=416640" target="_blank">亿性家</a></li>
@@ -141,12 +140,12 @@
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://taohuabt.com/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://cl.longbiao.wang/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
-<li><a href="http://hjkjh.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
-<li><a href="http://tmdkao.com/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
-<li><a href="http://cl.ek9.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
-<li><a href="http://cl.h5e.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
-<li><a href="http://c6.j8e.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
+<li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
+<li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://cl.ek9.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://c6.j8e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -237,6 +236,7 @@
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
+<li><a href="http://www.92sheav.top/" target="_blank">就爱射AV</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
@@ -281,6 +281,7 @@
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
+<li><a href="http://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
@@ -470,6 +471,7 @@
 <li><a href="https://en.bongacams.com/" target="_blank">bongacams</a></li>
 <li><a href="https://www.myfreecams.com/" target="_blank">MyFreeCams</a></li>
 <li><a href="http://fc2live.us/adult/" target="_blank">FC2 Live</a></li>
+<li><a href="http://wowchat.net/" target="_blank">wowchat</a></li>
 <li><a href="http://www.mmshowmm.net/" target="_blank">第一坊</a></li>
 				    </ul>
 		</div>
@@ -762,6 +764,7 @@
 <li><a href="http://www.similarsitesearch.com/cn/" target="_blank">相似搜索</a></li>
 <li><a href="http://chrome-extension-downloader.com/" target="_blank">下载crx</a></li>
 <li><a href="https://btso.pw/convert/magnet" target="_blank">BTSOW</a></li>
+<li><a href="http://www.jandown.com/" target="_blank">种子上传</a></li>
 <li><a href="https://www.yinxiang.com/?from=evernote" target="_blank">印象笔记</a></li>
 <li><a href="http://goo.gl/" target="_blank">Google短网址</a></li>
 <li><a href="http://dwz.cn/" target="_blank">百度短网址</a></li>
