--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
-                            <li><a href="http://dh.69.mu/" target="_blank">蓝导航</a></li>
+                            <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
                             <li><a href="http://1024daohang.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
