--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
                             <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
-                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-                            <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
@@ -180,6 +178,11 @@
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
+                            <li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
+                            <li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
+                            <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
+                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+                            <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
                             <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
