--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 <li><a href="http://87all.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
+<li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
@@ -284,7 +285,6 @@
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
-<li><a href="http://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
@@ -377,7 +377,6 @@
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
-<li><a href="http://192.186.31.86/?fromuid=34160" target="_blank">WC俱乐部</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
@@ -396,6 +395,7 @@
 <li><a href="http://www.sizuvip.com/?fromuid=29341" target="_blank">丝足vip</a></li>
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
+<li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://www.beautyleg.com/" target="_blank">BEAUTYLEG</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
@@ -461,7 +461,7 @@
 <li><a href="http://www.2423.cc/" target="_blank">VR在线直播</a></li>
 <li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
-<li><a href="http://www.137992.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
+<li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://184.164.72.138/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
 <li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
