--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs5.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
-<li><a href="http://www.youbbbs.org/?fromuid=65678" target="_blank">有B吗？</a></li>
+<li><a href="http://www.youbbbs.co/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
@@ -448,7 +448,7 @@
 		<strong><a name="/9/">信息交友</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://iywzd.net/bbs/?fromuid=574073" target="_blank">欲望都市</a></li>
+<li><a href="http://iywzd.info/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
