--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                             <li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
                             <li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
                             <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
+                            <li><a href="http://www.baihudh.info/" target="_blank">白虎福利导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
@@ -224,13 +225,14 @@
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
-<li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
+<li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
+<li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
@@ -247,7 +249,7 @@
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
-<li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
+<li><a href="http://www.benseporn.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
@@ -265,7 +267,7 @@
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb8.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb9.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
@@ -285,6 +287,7 @@
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
+<li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
@@ -321,11 +324,13 @@
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asianpornmovies</a></li>
 <li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="http://www.tub99.com/" target="_blank">TUB99</a></li>
+<li><a href="http://www.tubxporn.com/" target="_blank">TUBXPORN</a></li>
 <li><a href="http://www.seemyporn.com/" target="_blank">SeeMyPorn</a></li>
 <li><a href="http://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
 <li><a href="http://www.blacksexfuckingvideos.com/" target="_blank">BlackSex</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOOD AMATEURS</a></li>
 <li><a href="http://www.freejizzvideos.com/" target="_blank">Free Jizz</a></li>
+<li><a href="https://www.hdpornt.com/" target="_blank">HDPORNT</a></li>
 <li><a href="http://www.movieshark.com/" target="_blank">MOVIESHARK</a></li>
 <li><a href="http://neathdporn.com/" target="_blank">Neat HD Porn</a></li>
 <li><a href="http://www.myxvids.com/" target="_blank">MYXVIDS</a></li>
@@ -458,7 +463,6 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
-<li><a href="http://www.2423.cc/" target="_blank">VR在线直播</a></li>
 <li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
@@ -488,7 +492,8 @@
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
-<li><a href="http://yidoubi.com/" target="_blank">一逗比</a></li>
+<li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
+<li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
 <li><a href="http://www.yuliyazhu.com/" target="_blank">宅男福利社</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
