--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
-<li><a href="http://www.bim10.club/?fromuid=80" target="_blank">B友资源站</a></li>
+<li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.yesir.co/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
@@ -221,6 +221,7 @@
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
+<li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
