--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                             <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
+                            <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
                             <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
