--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
-<li><a href="http://www.benseporn.com/" target="_blank">本色视频</a></li>
+<li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
@@ -384,6 +384,7 @@
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
@@ -403,7 +404,6 @@
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
-<li><a href="http://www.beautyleg.com/" target="_blank">BEAUTYLEG</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
 <li><a href="http://www.ladyboyweb.com/" target="_blank">Ladyboyweb</a></li>
