--- a/index.html
+++ b/index.html
@@ -248,7 +248,6 @@
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
-<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
@@ -261,6 +260,10 @@
 <li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
+<li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
+<li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
+<li><a href="http://www.lu667.com/" target="_blank">撸一撸</a></li>
+<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
