--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://d.officeblog.jp/" target="_blank">蓝色资源</a></li>
+<li><a href="http://fruit.ml/" target="_blank">福利资源</a></li>
 <li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -138,7 +138,7 @@
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuabt.com/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabt.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
@@ -244,7 +244,7 @@
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
-<li><a href="http://www.92sheav.top/" target="_blank">就爱射AV</a></li>
+<li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
@@ -301,7 +301,7 @@
 <li><a href="http://www.jiuseteng.net/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
-<li><a href="http://www.megaline.co/Cazn2" target="_blank">91Porn</a></li>
+<li><a href="http://91.t9l.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -387,7 +387,6 @@
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
-<li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
@@ -502,6 +501,7 @@
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
 <li><a href="http://www.yuliyazhu.com/" target="_blank">宅男福利社</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
+<li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://lieqizhijia.com/" target="_blank">猎奇之家</a></li>
@@ -513,7 +513,6 @@
 <li><a href="http://www.gztown.com.cn/forum.php" target="_blank">港知堂论坛</a></li>
 <li><a href="http://bbs.kafan.cn/" target="_blank">卡饭论坛</a></li>
 <li><a href="http://www.repaik.com/" target="_blank">睿派克技术论坛</a></li>
-<li><a href="http://www.52pojie.cn/" target="_blank">吾爱破解</a></li>
 <li><a href="http://www.hdmee.com/" target="_blank">HD高清迷</a></li>
 <li><a href="http://gaoqing.la/" target="_blank">中国高清网</a></li>
 <li><a href="http://www.xixihd.com/" target="_blank">西西高清影视</a></li>
@@ -539,9 +538,9 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.javl10.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
+<li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
 <li><a href="http://mo688.net/" target="_blank">Dioguitar23</a></li>
