--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 <li><a href="http://mungmung.org/discuz/?fromuid=388575" target="_blank">矇矇開心小鎮</a></li>
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
+<li><a href="http://www.mycould.com/discuz/index.php" target="_blank">D.C.資訊交流網</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
@@ -141,7 +142,7 @@
 <li><a href="http://taohuabt.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.ek9.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
@@ -158,7 +159,6 @@
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
                             <li><a href="http://1024daohang.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
@@ -167,13 +167,14 @@
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
-                            <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
+                            <li><a href="http://bim10.info/" target="_blank">Bim精品导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
+                            <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
@@ -220,7 +221,6 @@
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
-<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -237,10 +237,11 @@
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
+<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
 <li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
-<li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
+<li><a href="http://www.avlu22.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
@@ -467,14 +468,13 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
-<li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
-<li><a href="http://184.164.72.138/?fromuid=678142" target="_blank">逍遥游</a></li>
+<li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
 <li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
-<li><a href="http://184.164.72.170/?u=430488" target="_blank">红河谷</a></li>
+<li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://www.2ni.la/" target="_blank">恋恋影视</a></li>
 <li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
 <li><a href="http://www.tnaflixcams.com/" target="_blank">tnaflixcams</a></li>
@@ -674,7 +674,7 @@
 <li><a href="http://www.jigglegifs.com/" target="_blank">JiggleGifs</a></li>
 <li><a href="http://www.porndao.net/" target="_blank">Porndao</a></li>
 <li><a href="http://www.pichunter.com/" target="_blank">Pichunter</a></li>
-<li><a href="https://www.zipaishe.net/" target="_blank">自拍社</a></li>
+<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
 <li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 				    </ul>
 		</div>
