--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<ul>
 <li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://fruit.ml/" target="_blank">福利资源</a></li>
-<li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
+<li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
@@ -106,7 +106,6 @@
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
 <li><a href="http://www.stiantang.info/?fromuid=24994" target="_blank">涩天堂</a></li>
-<li><a href="http://mungmung.org/discuz/?fromuid=388575" target="_blank">矇矇開心小鎮</a></li>
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="http://www.mycould.com/discuz/index.php" target="_blank">D.C.資訊交流網</a></li>
@@ -159,7 +158,7 @@
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://1024daohang.com/" target="_blank">豆福色导航</a></li>
+                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
                             <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
@@ -274,8 +273,11 @@
 <li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb9.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
+<li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
+<li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
 <li><a href="http://www.99ww8.com/" target="_blank">久久热视频</a></li>
