--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://fruit.ml/" target="_blank">福利资源</a></li>
+<li><a href="http://give.ga/" target="_blank">福利资源</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -143,7 +143,7 @@
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://cl.ek9.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://c6.d5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://c6.j8e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
@@ -642,10 +642,12 @@
 		<strong><a name="/14/">美图街拍</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
+<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
@@ -659,7 +661,7 @@
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="http://www.pornpicc.com/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
-<li><a href="http://www.guomo.ws/?fromuid=130143" target="_blank">国模</a></li>
+<li><a href="http://www.guomo.love/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
 <li><a href="http://www.hqseek.com/" target="_blank">hqseek</a></li>
@@ -676,8 +678,6 @@
 <li><a href="http://www.jigglegifs.com/" target="_blank">JiggleGifs</a></li>
 <li><a href="http://www.porndao.net/" target="_blank">Porndao</a></li>
 <li><a href="http://www.pichunter.com/" target="_blank">Pichunter</a></li>
-<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
-<li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 				    </ul>
 		</div>
 		</div>
