--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
+<li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
+<li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
@@ -243,7 +245,7 @@
 <li><a href="http://www.avlu22.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
-<li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
+<li><a href="http://www.91sheav.win/" target="_blank">就要射AV</a></li>
 <li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
@@ -319,12 +321,10 @@
 <li><a href="http://egbo.com/" target="_blank">EGBO</a></li>
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
-<li><a href="https://www.empflix.com/" target="_blank">EmpFlix</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
 <li><a href="http://www.longsextube.net/" target="_blank">Longsex</a></li>
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
-<li><a href="http://www.jizzbell.com/" target="_blank">Jizz Bell</a></li>
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="http://userporn.com/" target="_blank">Userporn</a></li>
@@ -370,6 +370,7 @@
 <li><a href="http://jav247.net/" target="_blank">Jav247</a></li>
 <li><a href="http://jadult.net/" target="_blank">Jadult</a></li>
 <li><a href="http://javhd3x.com/" target="_blank">JAVHD3X</a></li>
+<li><a href="http://muryouav-house.com/" target="_blank">JAVROOT</a></li>
 <li><a href="http://smv.to/" target="_blank">SHARE MOVIE</a></li>
 <li><a href="http://www.youtuck.com/" target="_blank">YouTuck</a></li>
 <li><a href="https://www.pornsia.com/" target="_blank">Pornsia</a></li>
