--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://party.gq" target="_blank"><span style="color:#2bf7c0;">party.gq</span></a></strong> 
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
@@ -56,7 +56,7 @@
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
-<li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
+<li><a href="http://174.127.195.186/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
@@ -156,7 +156,7 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
+                            <li><a href="http://8888kw.com/" target="_blank">500导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
