--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://clclcl.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://give.ga/" target="_blank">福利资源</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
@@ -83,7 +83,7 @@
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayahaus.com/index.php" target="_blank">玛雅网</a></li>
-<li><a href="http://provider.icargo.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
+<li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://www.mihk.hk/forum/index.php" target="_blank">香港製造論壇</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -117,7 +117,7 @@
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
-<li><a href="http://www.yxg169.com/?fromuid=5741" target="_blank">夜香阁</a></li>
+<li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
@@ -156,7 +156,7 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://8888kw.com/" target="_blank">500导航</a></li>
+                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
@@ -174,7 +174,6 @@
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
                             <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
-                            <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
@@ -207,7 +206,8 @@
                             <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
                             <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
                             <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
-                            <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>                            
+                            <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
+                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>                              
 				    </ul>
 		</div>
 		</div>
@@ -232,12 +232,12 @@
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
-<li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
+<li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
-<li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
+<li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
@@ -247,7 +247,7 @@
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.win/" target="_blank">就要射AV</a></li>
 <li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
-<li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
+<li><a href="http://www.912hh.vip/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
@@ -272,7 +272,7 @@
 <li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
-<li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
+<li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb9.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
@@ -284,7 +284,6 @@
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
 <li><a href="http://www.99ww8.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
-<li><a href="http://didimeimei.top/cao" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.aotu6.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
@@ -296,6 +295,7 @@
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
+<li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
@@ -391,6 +391,7 @@
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
