--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://clclcl.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.fatt.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://give.ga/" target="_blank">福利资源</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
-<li><a href="http://174.127.195.186/bbs/index.php" target="_blank">色中色</a></li>
+<li><a href="http://174.127.195.195/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
+<li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.yesir.co/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
@@ -85,12 +86,10 @@
 <li><a href="http://www.mayahaus.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
-<li><a href="http://www.mihk.hk/forum/index.php" target="_blank">香港製造論壇</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
 <li><a href="http://xocat2.com/f/?fromuid=1006945" target="_blank">Xocat Forum</a></li>
 <li><a href="http://bbs.airav.cc/forum.php?fromuid=130513" target="_blank">瘋AV</a></li>
 <li><a href="http://www.up01.cc/" target="_blank">UP01</a></li>
-<li><a href="http://www.lungtan.org/portal.php" target="_blank">龍壇書網</a></li>
 <li><a href="http://www.spring4u.info/index.php" target="_blank">春满四合院</a></li>
 <li><a href="http://www.cool18.com/bbs4/" target="_blank">禁忌书屋</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
@@ -109,7 +108,6 @@
 <li><a href="http://www.stiantang.info/?fromuid=24994" target="_blank">涩天堂</a></li>
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
-<li><a href="http://www.mycould.com/discuz/index.php" target="_blank">D.C.資訊交流網</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
@@ -284,7 +282,7 @@
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
 <li><a href="http://www.99ww8.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
-<li><a href="http://www.aotu6.com/" target="_blank">凹凸视频</a></li>
+<li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
 <li><a href="http://www.liuliucao.tv/" target="_blank">榴榴草</a></li>
