--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
